Adding a heap o' story links

--- a/newsletter/2021-05-16.html
+++ b/newsletter/2021-05-16.html
@@ -4,10 +4,49 @@
 
   Some story candidates...
 
-  - TK
-  - TK
-  - TK
-  - TK
+  - Nice bit of internet history from NPR's How I Built It podcast. Catching up with Cisco co-founder Sandy Lerner. https://t.co/Cl6wZXbmJN?amp=1
+
+  - Elon Musk tanked both dogecoin and bitcoin. DOGE took a hit after his SNL hosting spot on the 8th. Tesla has stopped taking BTC as payment for its vehicles for now due to environmental concerns. (https://slate.com/technology/2021/05/elon-musk-snl-dogecoin-weekend-update-hodl.html) Meanwhile BTC dominance has hovered below 50% through all of May so far.  https://www.fastcompany.com/90636270/why-is-bitcoin-crashing-what-elon-musks-tesla-comments-mean-for-the-cryptocurrency?partner=rss&utm_source=twitter.com&utm_medium=social&utm_campaign=rss+fastcompany&utm_content=rss | However, Saylor is buing more: https://twitter.com/michael_saylor/status/1392814015181635584?s=20 | https://www.coindesk.com/microstrategy-keeps-buying-bitcoin-adds-another-15m |  https://twitter.com/elonmusk/status/1392602041025843203 | https://www.coindesk.com/everything-costs-energy-bitcoin-mining
+
+  - Meanwhile Ethereum's valuation topped $500 billion. That makes it bigger than JP Morgan and Visa. https://www.coindesk.com/ether-hits-500b-market-cap-for-first-time
+
+  - DOJ and IRS are investigating Binance. https://www.theblockcrypto.com/linked/104836/binance-crypto-irs-us-government-investigation-report
+
+  - Cowen got into crypto custody. https://decrypt.co/70779/cowen-crypto-custody | UBS is also exploring new crypto offerings. https://www.theblockcrypto.com/linked/104297/swiss-banking-giant-ubs-exploring-crypto-report
+
+  - Coinbase announced its first quarterly earnings as a public company. https://www.coindesk.com/coinbases-first-ever-q1-earnings-report-is-today-but-the-real-focus-is-on-the-q2-view
+
+  - Vitalik donated $60M to charity from sales of several meme coins. https://www.theblockcrypto.com/post/104676/vitalik-buterin-donates-more-than-60m-to-charity-after-selling-meme-tokens-including-shiba-inu
+
+  - MoneyGram is adding features to let crypto holders withdraw their funds. https://www.cnbc.com/2021/05/12/moneygram-to-let-cryptocurrency-traders-cash-in-their-investments.html
+
+  - Steve Cohen's Point72 is reportedly close to making a big foray into crypto. https://www.theblockcrypto.com/post/104522/steve-cohen-point72-crypto-market
+
+  - Palantir now accepts bitcoin payments. https://www.coindesk.com/peter-thiels-palantir-now-accepts-bitcoin-payments-thinking-about-treasury-investment
+
+  - Registration opened for Consensys 2021. https://www.coindesk.com/events/consensus-2021
+
+  - EBay opened up to NFT sales. https://www.theblockcrypto.com/linked/104508/ebay-offering-nft-sales
+
+  - The crypto industry has increased its lobbying of U.S. legislators. https://www.nytimes.com/2021/05/09/us/politics/cryptocurrency-regulation-sec-ripple-labs.html
+
+  - Tether published new information about the backing of its stablecoins. https://www.coindesk.com/tether-first-reserve-composition-report-usdt
+
+  - Bloomberg reports that China's experimental CBDC has gotten mixed reviews from early users. https://www.bloomberg.com/news/videos/2021-05-10/digital-yuan-fails-to-impress-early-users-video
+
+  - Diem is coming to the US. https://www.youtube.com/watch?v=YIV2yYmN2CY | https://www.cnbc.com/2021/05/12/facebook-backed-diem-is-moving-from-switzerland-to-the-us.html
+
+  - There's a new U.S. exchange-traded fund on crypto companies. https://decrypt.co/70649/bitwise-crypto-company-etf-nyse (Still no BTC ETF, though. Pickup new SEC note.)
+
+  - Brave said it's using machine learning to protect user privacy. https://twitter.com/convoluted_code/status/1392041983154262017 | https://arxiv.org/abs/2105.03941 | https://www.coindesk.com/brave-integrates-crypto-blockchain-domains-expanding-access-to-web-3-0
+
+  - The Colonial Pipeline restarted operations after a painful ransomware attack. https://www.coindesk.com/colonial-pipeline-paid-almost-5m-crypto-ransom-soon-after-attack-report
+
+  - EasyFi is going to compensate users affected by a recent hack. https://bitcoinist.com/security-incident-easyfi-to-compensate-100-of-the-depositors-net-balances/ | DeFi protocol xToken was also hacked https://www.coindesk.com/defi-protocol-xtoken-suffers-24-5m-exploit
+
+  - CNBC: The global chip shortage is starting to have major real-world consequences. https://www.cnbc.com/2021/05/07/chip-shortage-is-starting-to-have-major-real-world-consequences.html | NYT: "Chips are the new toilet paper." https://www.nytimes.com/2021/05/07/technology/computer-chip-shortages-toilet-paper-pandemic.html
+
+  - There's going to be a bitcoin-sponsored car in this years Indianapolis 500. https://jimmymow.medium.com/announcing-the-bitcoin-car-520a25b9b41e | Pickup McCormack podcast intvu as well...
 
   -->
 
