--- a/newsletter/2021-05-30.html
+++ b/newsletter/2021-05-30.html
@@ -4,6 +4,48 @@
 
   Some story candidates...
 
+  - New a16z crypto fund could top $2B. https://www.newcomer.co/p/a16z-crypto-fund-balloons-to-2-billion | https://www.theblockcrypto.com/linked/106605/a16z-2-billion-valuation-crypto-fund?utm_source=rss&utm_medium=rss
+
+  - Bill Ackman says he has no interest in investing in crypto because it's too speculative. https://www.theblockcrypto.com/post/106303/billionaire-investor-bill-ackman-bitcoin-speculative-crypto?utm_source=rss&utm_medium=rss | https://www.theblockcrypto.com/post/106303/billionaire-investor-bill-ackman-bitcoin-speculative-crypto
+
+  - Cointelegraph posted a short documentary on the history of cryptography. https://www.youtube.com/watch?v=RTDYRl1uaMI
+
+  - Telos is getting ready to launch an EVM, has created a portal site for devs. https://telos.net/telos-evm/
+
+  - GameStop is building an NFT platform. https://nft.gamestop.com/ | https://www.theblockcrypto.com/linked/106071/gaming-retailer-gamestop-is-building-an-nft-platform-on-ethereum | Wall Street Bets redditors are turning their attention to crypto. https://decrypt.co/71884/redditors-are-turning-crypto-not-gamestop-amid-market-volatility
+
+  - SEC Chair Gary Gensler is concerned about defi. https://www.coindesk.com/defi-raises-challenges-for-investors-regulators-secs-gensler-says | The SEC is also considering some long-awaited ETF proposals. https://www.coindesk.com/sec-starts-official-review-of-skybridge-fidelity-bitcoin-etf-applications | It may be time to modernize custody rules to cover crypto, says commissioner Peirce. https://www.coindesk.com/hester-peirce-sec-consensus-2021
+
+  - Nebraska will allow state licensing of crypto banks. https://decrypt.co/72001/nebraska-crypto-banks
+
+  - Payments platform Chia is considering an IPO. https://www.coindesk.com/blockchain-payments-platform-chia-on-an-accelerated-timeline-to-ipo
+
+  - There's now a Congressional Blockchain Caucus. Who knew? https://congressionalblockchaincaucus-schweikert.house.gov/members
+
+  - BREAKING: @PayPal plans to allow customers to withdraw cryptocurrency to third-party wallets for the first time since it began offering buy and sell options last year, an executive said at #Consensus2021. 
+(Developing story, refresh browser for updates)
+ https://twitter.com/CoinDesk/status/1397613031639732231
+
+  - Michael Saylor convened the formation of a new Bitcoin Mining Council to address recent environmental concerns. https://cointelegraph.com/news/michael-saylor-says-bitcoin-mining-council-required-to-combat-hostile-narrative | The number of bitcoin hodlrs is at a record high. https://www.coindesk.com/number-of-bitcoin-accumulation-addresses-hit-record-high
+
+  - Carl Icahn is eyeing a potential investment in bitcoin. https://www.coindesk.com/carl-icahn-bitcoin-crypto-big-way
+
+  - Whales have bought about $3B of bitcoin during the recent market dip. https://www.theblockcrypto.com/post/106266/whales-bought-3-billion-of-bitcoin-when-its-price-fell-says-chainalysis | https://markets.chainalysis.com/reports/2021-05-26
+
+  - Uniswap seems poised to expand to the Ethereum scaling solution Arbitrum, The Block reports. https://www.theblockcrypto.com/post/106277/uniswap-likely-to-expand-to-ethereum-scaling-solution-arbitrum
+
+  - WisdomTree filed with U.S. regulators to create an exchange-traded fund for Ethereum. https://www.coindesk.com/wisdomtree-files-ethereum-etf-application-as-bitcoin-bids-await-sec-decision
+
+  - Ray Dalio discloses that he's bought some bitcoin. https://www.coindesk.com/consensus-ray-dalio-i-have-some-bitcoin | So has Wyoming's governor. https://www.coindesk.com/wyoming-governor-mark-gordon-owns-crypto
+
+  - The Wall Street Journal checked in on Uniswap. https://www.wsj.com/articles/upstart-peer-to-peer-crypto-exchanges-take-aim-at-coinbase-11621848601
+
+  - The Fed may need additional authority to issue a CBDC of its own, Quarles says. https://www.theblockcrypto.com/linked/105964/fed-authority-cbdc-rollout-congress
+
+  - Sichuan hosts seminar to gauge potential bitcoin mining ban's impact on hydropower economy. https://www.theblockcrypto.com/linked/106244/sichuan-bitcoin-mining-ban-seminar-hydro-electricity | Nic Carter thinks a reduced role for china in bitcoin mining might have a silver lining. https://twitter.com/nic__carter/status/1395837783407833093 | Inner Mongolia also issued new rules. https://www.theblockcrypto.com/post/105973/china-inner-mongolia-crypto-bitcoin-mining-ban-measures
+
+  - A new Fidelity bitcoin fund attracted $102M in its first 9 months. https://www.coindesk.com/fidelity-bitcoin-fund-attracts-102m-in-first-9-months
+
   - Bitcoin and stocks are getting (somewhat) more correlated, according to a new study. https://www.bloomberg.com/news/articles/2021-05-26/bitcoin-s-volatility-is-spilling-over-to-u-s-stocks-study-says
 
   - Following the recent Colonial Pipeline hack, the U.S. government is now going to require operators to report such hacks. (Ummm, why didn't they do this before?) https://www.wsj.com/articles/tsa-to-require-pipeline-operators-to-notify-it-of-cyberattacks-11621960244?mod=hp_lead_pos4
