Fleshing out possible links for next edition

--- a/newsletter/2021-06-06.html
+++ b/newsletter/2021-06-06.html
@@ -2,13 +2,57 @@
 
     <!--
 
-      Some story candidates...
+      Story candidates...
+
+      - Anchorage Digital is rolling out ETH-backed loans with America's 10th oldest bank. https://www.theblockcrypto.com/post/107147/anchorage-eth-loans-bankprov-lending
+
+      - Sotheby's is conducting an NFT auction. https://www.reuters.com/technology/sothebys-sell-first-nft-online-auction-2021-06-01/
+
+      - Ethereum on-chain volume, miner revenues hit new records in may. https://www.theblockcrypto.com/linked/106827/multiple-eth-records-miner-revenue-on-chain-volume-broken-may
+
+      - Coinbase's debit card now works with Apple Pay. https://www.coindesk.com/coinbase-debit-card-now-works-with-apple-pay
+
+      - DeFi protocols generated $370M in revenue in May. https://www.theblockcrypto.com/linked/106858/defi-protocols-ethereum-may-revenue
+
+      - Singapore's DBS Bank issued its first bond via blockchain, a $15 million listing. https://www.ledgerinsights.com/dbs-bank-issues-blockchain-bond-as-security-token/
+
+      -The Reserve Bank of India eased its stance on crypto risk to investors. https://www.coindesk.com/rbi-says-banks-cant-quote-2018-circular-to-restrict-crypto-transactions
+
+      - Crypto exchange volume topped $2 trillion in May, a new record. https://www.theblockcrypto.com/linked/106654/crypto-exchange-volume-2-trillion-may-highest-history
+
+      - More than 5 million ether have been deposited in the Ethereum 2.0 smart contract. https://www.theblockcrypto.com/linked/106721/more-than-5-million-eth-has-been-sent-to-ethereum-2-0s-deposit-contract
+
+      - Bitcoin suffered its second biggest monthly decline ever in May. Early June has been kinder so far, though. https://www.coindesk.com/bitcoin-eyes-second-biggest-monthly-drop-on-record
+
+      - Jamie Dimon is bashing crypto again. https://finance.yahoo.com/news/jp-morgans-jamie-dimon-buyer-beware-on-cryptocurrencies-200700048.html | https://finance.yahoo.com/news/bitcoin-price-crash-isnt-over-jp-morgan-105555648.html
+
+      - Coinbase added Dogecoin trading. https://www.msn.com/en-us/money/markets/coinbase-now-allows-dogecoin-trading/ar-AAKIpKI | bhttps://blog.coinbase.com/dogecoin-doge-is-launching-on-coinbase-pro-1d73bf66dd9d
+
+      - The G7 countries reached a deal on minimum taxation of global companies. This one has major implications for Big Tech.  https://www.theblockcrypto.com/post/107367/g7-stablecoins-cbdc-statement-june-2021?utm_source=rss&utm_medium=rss | https://www.washingtonpost.com/us-policy/2021/06/05/g7-tax-us-yellen/
 
       - Guggenheim is creating a crypto fund. ((Need link...))
 
+      - Andreessen Horowitz may double the size of its third crypto fund to $2 billion, according to blogger Eric Newcomer. https://www.newcomer.co/p/a16z-crypto-fund-balloons-to-2-billion
+
+      - The US Treasury wants to expand crypto reporting to fight offshore tax evasion. https://www.theblockcrypto.com/post/106596/the-us-treasury-wants-to-expand-crypto-reporting-to-fight-offshore-tax-evasion
+
+      - The SEC sued 5 people alleging a $2B Ponzi scheme at BitConnect. https://www.coindesk.com/sec-sues-5-over-2b-bitconnect-ponzi
+
+      - FTX is launching an NFT exchange. https://www.theblockcrypto.com/post/107087/crypto-exchange-ftx-nft-marketplace
+
+      - EToro added 3.1 million users in 1Q. https://www.coindesk.com/online-broker-etoro-adds-3-1m-new-clients-in-first-quarter-report
+
+      - Nigeria blocked Twitter. https://www.theverge.com/2021/6/5/22520166/twitter-suspended-nigeria-delete-tweet-president-violate-rules
+
+      - The WSJ looked at China's changing posture toward bitcoin mining. https://www.wsj.com/articles/china-reconsiders-its-central-role-in-bitcoin-mining-11622865618?mod=hp_lead_pos3
+
+      - The North American Bitcoin Conference kicked off in Miami. https://bitcoinist.com/key-quotes-and-ideas-from-day-one-of-the-bitcoin-2021-conference-in-miami/ | https://www.youtube.com/watch?v=s2bK0eDGSzk | https://www.nytimes.com/2021/06/05/technology/miami-worship-bitcoin.html | https://decrypt.co/72532/miami-crypto-aspirations-boosted-borderless-capitals-25-million-fund | https://www.coindesk.com/blockchain-com-to-move-us-headquarters-to-miami-from-new-york
+
+      - The US will now treat hacking investigations in a similar way as terrorism investigations. https://www.theblockcrypto.com/linked/107150/ransomware-investigations-elevated-priority-terrorism?utm_source=rss&utm_medium=rss
+
       - WSJ checks in on DeFi. https://www.wsj.com/articles/defi-is-helping-to-fuel-the-crypto-market-boomand-its-recent-volatility-11622712602
 
-      - AMC went full "meme stock." At one point, it was worth more than half the companies in the S&P 500. https://www.bloomberg.com/news/articles/2021-06-02/amc-extends-advance-in-postmarket-trading-on-mudrick-deal?srnd=premium
+      - AMC went full "meme stock." At one point, it was worth more than half the companies in the S&P 500. https://www.bloomberg.com/news/articles/2021-06-02/amc-extends-advance-in-postmarket-trading-on-mudrick-deal?srnd=premium | https://www.wsj.com/articles/amc-boss-adam-aron-basks-in-meme-stock-spotlight-11622799000?mod=hp_lista_pos2
 
       - Willy Woo: BTC has roughly same user base the internet had in 1997. https://twitter.com/woonomic/status/1356310219215699968
 
