Adding links from Bitcoinist, CoinDesk, etc.

--- a/newsletter/2021-06-20.html
+++ b/newsletter/2021-06-20.html
@@ -4,9 +4,19 @@
 
   Some story candidates for next newsletter...
 
-  - tk
-  - tk
-  - tk
+  - China is testing digital yuan for salary payments. https://www.youtube.com/watch?v=AzxfuloxWIQ
+
+  - Goldman Sachs is going to start trading ETH options and futures. https://bitcoinist.com/goldman-sachs-to-start-trading-ethereum-options-and-futures/
+
+  - Suze Orman now recommends stacking sats. https://bitcoinist.com/investing-icon-suze-orman-suggests-stacking-bitcoin-for-the-long-haul/
+
+  - Coinbase Pro listed Shiba Inu and several other new tokens, which leapt on the news. https://www.youtube.com/watch?v=newmqEJN_gs
+
+  - Porsche is launching an NFT platform. https://bitcoinist.com/porsche-launches-nft-trading-platform-fanzone/?utm_source=rss&utm_medium=rss&utm_campaign=porsche-launches-nft-trading-platform-fanzone
+
+  - Sir Tim Berners-Lee is planning to auction via Sotheby's an NFT of the original source code he used to create the World Wide Web. https://bitcoinist.com/sothebys-to-auction-off-world-wide-web-source-code-as-nft/
+
+  - Who will be the next El Salvador? Politicians in Panama, Brazil, Argentina and Paraguay are all considering similar legislation to adopt BTC as legal tender. https://www.msn.com/en-au/money/markets/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/ar-AAKOGHe | The World Bank is declining to help El Salvador make the transition. https://www.msn.com/en-us/news/world/world-bank-declines-to-help-el-salvador-adopt-bitcoin-citing-environmental-and-transparency-concerns/ar-AAL9KGo | A look at Nigeria's potential: https://bitcoinist.com/why-nigeria-could-be-the-next-nation-to-embrace-bitcoin/?utm_source=rss&utm_medium=rss&utm_campaign=why-nigeria-could-be-the-next-nation-to-embrace-bitcoin | https://www.coindesk.com/panama-to-present-crypto-related-bill-in-july | https://www.thestreet.com/crypto/bitcoin/panama-may-join-el-salvador-and-paraguay-in-bitcoin-adoption 
 
   -->
 
