Adding more story candidates...

--- a/newsletter/2021-06-20.html
+++ b/newsletter/2021-06-20.html
@@ -6,6 +6,36 @@
 
   - China is testing digital yuan for salary payments. https://www.youtube.com/watch?v=AzxfuloxWIQ
 
+  - Real estate is nowin being sold in NFT format. https://decrypt.co/73895/decentraland-nft-real-estate-ethereum-metaverse-record
+
+  - Taproot is a go. https://www.coindesk.com/locked-in-bitcoin-taproot-upgrade-gets-activation-mandate
+
+  - Hut 8 Mining is going to list on Nasdaq. https://www.coindesk.com/hut-8-mining-to-raise-82m-in-stock-offering-ahead-of-nasdaq-listing
+
+  - Several meme coins soared after being listed on Coinbase Pro. https://www.coindesk.com/shiba-inu-chiliz-keep-network-soar-after-being-added-to-coinbase-pro
+
+  - Block.one settled a class-action lawsuit related to the EOS ICO. https://decrypt.co/73500/block-one-settles-for-27-5-million-in-eos-ico-class-action
+
+  - Big Fed meeting this week. Here's their statement: https://www.federalreserve.gov/newsevents/pressreleases/monetary20210616a.htm
+
+  - The FT says hedge funds are expected to hold 7% of assets in crypto within 7 yrs. https://www.ft.com/content/4f8044bf-8f0f-46b4-9fb7-6d0eba723017
+
+  - The Bitcoin Mining Council had its first meeting. https://www.theblockcrypto.com/post/108731/the-bitcoin-mining-council-wants-to-dispel-negative-media-narratives
+
+  - Fox Entertainment is investing $100M in its new NFT studio. https://decrypt.co/73735/media-titan-fox-launches-100m-fund-new-nft-studio
+
+  - Morgan Stanley is expanding bitcoin options. https://decrypt.co/73733/morgan-stanley-set-expand-bitcoin-fund-options
+
+  - State Street is exploring the crypto custody business. https://www.theblockcrypto.com/post/108214/state-street-stands-up-new-crypto-unit-as-it-eyes-potential-custody-defi-products
+
+  _ The Republicans' House campaign arm will begin accepting contributions in cryptocurrency, Axios has learned. https://www.cnbc.com/2021/06/13/musk-tesla-will-accept-bitcoin-when-miners-use-clean-energy.html
+
+  - Elon Musk said Tesla will resume accpeting bitcoin payments when more than half the token's mining power comes from clean energy. https://www.cnbc.com/2021/06/13/musk-tesla-will-accept-bitcoin-when-miners-use-clean-energy.html
+
+  - MicroStrategy is forming a new unit, MacroStrategy, to acquire more bitcoin. https://www.coindesk.com/microstrategy-raises-500m-from-bond-sale-to-buy-more-bitcoin
+
+  - A blockchain-powered travel app is launching to compete with Airbnb. https://bitcoinist.com/binances-travala-launches-blockchain-powered-airbnb-competitor/?utm_source=rss&utm_medium=rss&utm_campaign=binances-travala-launches-blockchain-powered-airbnb-competitor
+
   - Goldman Sachs is going to start trading ETH options and futures. https://bitcoinist.com/goldman-sachs-to-start-trading-ethereum-options-and-futures/
 
   - Suze Orman now recommends stacking sats. https://bitcoinist.com/investing-icon-suze-orman-suggests-stacking-bitcoin-for-the-long-haul/
@@ -14,9 +44,11 @@
 
   - Porsche is launching an NFT platform. https://bitcoinist.com/porsche-launches-nft-trading-platform-fanzone/?utm_source=rss&utm_medium=rss&utm_campaign=porsche-launches-nft-trading-platform-fanzone
 
-  - Sir Tim Berners-Lee is planning to auction via Sotheby's an NFT of the original source code he used to create the World Wide Web. https://bitcoinist.com/sothebys-to-auction-off-world-wide-web-source-code-as-nft/
+  - Sir Tim Berners-Lee is planning to auction via Sotheby's an NFT of the original source code he used to create the World Wide Web. https://bitcoinist.com/sothebys-to-auction-off-world-wide-web-source-code-as-nft/  | https://decrypt.co/73646/tim-berners-lees-world-wide-web-source-code-be-immortalized-nft
 
-  - Who will be the next El Salvador? Politicians in Panama, Brazil, Argentina and Paraguay are all considering similar legislation to adopt BTC as legal tender. https://www.msn.com/en-au/money/markets/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/ar-AAKOGHe | The World Bank is declining to help El Salvador make the transition. https://www.msn.com/en-us/news/world/world-bank-declines-to-help-el-salvador-adopt-bitcoin-citing-environmental-and-transparency-concerns/ar-AAL9KGo | A look at Nigeria's potential: https://bitcoinist.com/why-nigeria-could-be-the-next-nation-to-embrace-bitcoin/?utm_source=rss&utm_medium=rss&utm_campaign=why-nigeria-could-be-the-next-nation-to-embrace-bitcoin | https://www.coindesk.com/panama-to-present-crypto-related-bill-in-july | https://www.thestreet.com/crypto/bitcoin/panama-may-join-el-salvador-and-paraguay-in-bitcoin-adoption | Russel Okung is encouraging Nigeria to adopt a bitcoin standard. https://stockhead.com.au/cryptocurrency/nfl-star-okung-asks-nigeria-to-claim-global-prominence-by-adopting-a-bitcoin-standard/ | https://stockhead.com.au/cryptocurrency/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/
+  - South Korea halted trading in several tokens that regulators deemed too speculative. https://www.coindesk.com/south-korea-crypto-exchanges-halt-trading-certain-coins
+
+  - Who will be the next El Salvador? Politicians in Panama, Brazil, Argentina and Paraguay are all considering similar legislation to adopt BTC as legal tender. https://www.msn.com/en-au/money/markets/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/ar-AAKOGHe | The World Bank is declining to help El Salvador make the transition. https://www.msn.com/en-us/news/world/world-bank-declines-to-help-el-salvador-adopt-bitcoin-citing-environmental-and-transparency-concerns/ar-AAL9KGo | A look at Nigeria's potential: https://bitcoinist.com/why-nigeria-could-be-the-next-nation-to-embrace-bitcoin/?utm_source=rss&utm_medium=rss&utm_campaign=why-nigeria-could-be-the-next-nation-to-embrace-bitcoin | https://www.coindesk.com/panama-to-present-crypto-related-bill-in-july | https://www.thestreet.com/crypto/bitcoin/panama-may-join-el-salvador-and-paraguay-in-bitcoin-adoption | Russel Okung is encouraging Nigeria to adopt a bitcoin standard. https://stockhead.com.au/cryptocurrency/nfl-star-okung-asks-nigeria-to-claim-global-prominence-by-adopting-a-bitcoin-standard/ | https://bitcoinmagazine.com/culture/bitcoin-letter-to-nigeria-government | https://stockhead.com.au/cryptocurrency/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/
 
   -->
 
