Final copy for 20 June 2021

--- a/newsletter/2021-06-20.html
+++ b/newsletter/2021-06-20.html
@@ -1,57 +1,5 @@
 <doctype html>
 
-  <!--
-
-  Some story candidates for next newsletter...
-
-  - China is testing digital yuan for salary payments. https://www.youtube.com/watch?v=AzxfuloxWIQ
-
-  - Real estate is nowin being sold in NFT format. https://decrypt.co/73895/decentraland-nft-real-estate-ethereum-metaverse-record
-
-  - Taproot is a go. https://www.coindesk.com/locked-in-bitcoin-taproot-upgrade-gets-activation-mandate
-
-  - Hut 8 Mining is going to list on Nasdaq. https://www.coindesk.com/hut-8-mining-to-raise-82m-in-stock-offering-ahead-of-nasdaq-listing
-
-  - Several meme coins soared after being listed on Coinbase Pro. https://www.coindesk.com/shiba-inu-chiliz-keep-network-soar-after-being-added-to-coinbase-pro
-
-  - Block.one settled a class-action lawsuit related to the EOS ICO. https://decrypt.co/73500/block-one-settles-for-27-5-million-in-eos-ico-class-action
-
-  - Big Fed meeting this week. Here's their statement: https://www.federalreserve.gov/newsevents/pressreleases/monetary20210616a.htm
-
-  - The FT says hedge funds are expected to hold 7% of assets in crypto within 7 yrs. https://www.ft.com/content/4f8044bf-8f0f-46b4-9fb7-6d0eba723017
-
-  - The Bitcoin Mining Council had its first meeting. https://www.theblockcrypto.com/post/108731/the-bitcoin-mining-council-wants-to-dispel-negative-media-narratives
-
-  - Fox Entertainment is investing $100M in its new NFT studio. https://decrypt.co/73735/media-titan-fox-launches-100m-fund-new-nft-studio
-
-  - Morgan Stanley is expanding bitcoin options. https://decrypt.co/73733/morgan-stanley-set-expand-bitcoin-fund-options
-
-  - State Street is exploring the crypto custody business. https://www.theblockcrypto.com/post/108214/state-street-stands-up-new-crypto-unit-as-it-eyes-potential-custody-defi-products
-
-  _ The Republicans' House campaign arm will begin accepting contributions in cryptocurrency, Axios has learned. https://www.cnbc.com/2021/06/13/musk-tesla-will-accept-bitcoin-when-miners-use-clean-energy.html
-
-  - Elon Musk said Tesla will resume accpeting bitcoin payments when more than half the token's mining power comes from clean energy. https://www.cnbc.com/2021/06/13/musk-tesla-will-accept-bitcoin-when-miners-use-clean-energy.html
-
-  - MicroStrategy is forming a new unit, MacroStrategy, to acquire more bitcoin. https://www.coindesk.com/microstrategy-raises-500m-from-bond-sale-to-buy-more-bitcoin
-
-  - A blockchain-powered travel app is launching to compete with Airbnb. https://bitcoinist.com/binances-travala-launches-blockchain-powered-airbnb-competitor/?utm_source=rss&utm_medium=rss&utm_campaign=binances-travala-launches-blockchain-powered-airbnb-competitor
-
-  - Goldman Sachs is going to start trading ETH options and futures. https://bitcoinist.com/goldman-sachs-to-start-trading-ethereum-options-and-futures/
-
-  - Suze Orman now recommends stacking sats. https://bitcoinist.com/investing-icon-suze-orman-suggests-stacking-bitcoin-for-the-long-haul/
-
-  - Coinbase Pro listed Shiba Inu and several other new tokens, which leapt on the news. https://www.youtube.com/watch?v=newmqEJN_gs
-
-  - Porsche is launching an NFT platform. https://bitcoinist.com/porsche-launches-nft-trading-platform-fanzone/?utm_source=rss&utm_medium=rss&utm_campaign=porsche-launches-nft-trading-platform-fanzone
-
-  - Sir Tim Berners-Lee is planning to auction via Sotheby's an NFT of the original source code he used to create the World Wide Web. https://bitcoinist.com/sothebys-to-auction-off-world-wide-web-source-code-as-nft/  | https://decrypt.co/73646/tim-berners-lees-world-wide-web-source-code-be-immortalized-nft
-
-  - South Korea halted trading in several tokens that regulators deemed too speculative. https://www.coindesk.com/south-korea-crypto-exchanges-halt-trading-certain-coins
-
-  - Who will be the next El Salvador? Politicians in Panama, Brazil, Argentina and Paraguay are all considering similar legislation to adopt BTC as legal tender. https://www.msn.com/en-au/money/markets/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/ar-AAKOGHe | The World Bank is declining to help El Salvador make the transition. https://www.msn.com/en-us/news/world/world-bank-declines-to-help-el-salvador-adopt-bitcoin-citing-environmental-and-transparency-concerns/ar-AAL9KGo | A look at Nigeria's potential: https://bitcoinist.com/why-nigeria-could-be-the-next-nation-to-embrace-bitcoin/?utm_source=rss&utm_medium=rss&utm_campaign=why-nigeria-could-be-the-next-nation-to-embrace-bitcoin | https://www.coindesk.com/panama-to-present-crypto-related-bill-in-july | https://www.thestreet.com/crypto/bitcoin/panama-may-join-el-salvador-and-paraguay-in-bitcoin-adoption | Russel Okung is encouraging Nigeria to adopt a bitcoin standard. https://stockhead.com.au/cryptocurrency/nfl-star-okung-asks-nigeria-to-claim-global-prominence-by-adopting-a-bitcoin-standard/ | https://bitcoinmagazine.com/culture/bitcoin-letter-to-nigeria-government | https://stockhead.com.au/cryptocurrency/politicians-in-panama-brazil-argentina-and-paraguay-look-to-follow-el-salvador-on-bitcoin-adoption/
-
-  -->
-
 <html lang="en">
 
   <head>
@@ -110,34 +58,86 @@
     <div id="palette">
 
       <span id="flag">
+
         <span><img src="https://indizr.com/img/w3w-logo-1000-white-orange.png" alt="#Web3 Weekly"></span>
+
         <h4>June 13-19, 2021</h4></span>
 
         <br>
 
+        <p><strong>The way money works is changing fundamentally, at a truly dizzying pace.</strong> Five lessons that recent events show us about the situation, covering both digital money and the more old-fashioned kind as well:</p>
 
-        <p>The latest headlines about decentralization:</p>
+        <p><strong>1. A heated race has broken out among developing countries to adopt bitcoin as legal tender.</strong></p>
+
+        <p>When El Salvador embraced bitcoin along with the dollar as its official currency on <a href="https://www.reuters.com/world/americas/el-salvador-approves-first-law-bitcoin-legal-tender-2021-06-09/">June 9</a>, crypto insiders hoped it would serve as a precedent for other countries to emulate over time.</p>
+
+        <p>Well, that didn't take long at all. Last week, lawmakers in <a href="https://www.coindesk.com/panama-to-present-crypto-related-bill-in-july">Panama</a>, <a href="https://www.thestreet.com/crypto/bitcoin/politicians-from-these-countries-have-called-for-bitcoin-adoption">Brazil</a>, <a href="https://restofworld.org/2021/latin-america-politicians-bitcoin/">Argentina</a>, <a href="https://www.thestreet.com/crypto/bitcoin/politicians-from-these-countries-have-called-for-bitcoin-adoption">Mexico</a>, <a href="https://bitcoinist.com/paraguay-follows-el-salvador-in-tabling-bitcoin-bill-the-crypto-revolution-is-happening/">Paraguay</a>, <a href="https://cointelegraph.com/news/tanzanian-president-urges-central-bank-to-prepare-for-crypto">Tanzania</a>, and <a href="https://coinquora.com/will-tonga-be-the-next-nation-to-adopt-bitcoin/">Tonga</a> all expressed preliminary interest in adopting bitcoin as well.</p>
+
+        <p>For smaller, poorer countries, a few big benefits of bitcoin are coming into focus. For starters, some have unstable local currencies that cry out for an alternative. The default fallback for many has historically been to "dollarize," or adopt the U.S. greenback, as El Salvador did <a href="https://en.wikipedia.org/wiki/Salvadoran_col%C3%B3n">in the early 2000s</a>. But adoption of the dollar also inevitably comes with a certain amount of political leverage from the U.S. attached. That's a price some foreign leaders seem to be growing antsy about in 2021, even in ostensibly U.S.-friendly countries.</p>
+
+        <p>Another big issue in poor countries is remittances, or transfers of money from expats to relatives back home. Such activity constitutes about 20% of El Salvador's gross domestic product, for example.</p>
+
+        <p>Remittances are notoriously slow and expensive working through traditional banks. On a public blockchain network like bitcoin's, however, sending money works similarly to sending someone an email, with much lower fees than the banks charge.</p>
+
+        <p>In other words, with the stroke of a pen recognizing bitcoin legal tender, El Salvador just made one-fifth of its entire economy cheaper, faster, and more efficient to run. You can see why its peers might want to follow suit.</p>
+
+        <p><strong>2. Meanwhile, China is the clear leader among larger economic powers looking to launch official digital currencies.</strong></p>
+
+        <p>A slew of central banks, mostly in richer countries, are also exploring the possibility of issuing "official" blockchain-based money. China's digital yuan is easily the furthest along, with public testing now underway. The country's trials just expanded to <a href="https://www.coindesk.com/china-cbdc-wage-pilot">cover salary payments</a> for some workers.</p>
 
 
-        <ul>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-        </ul>
+        <p><strong>3. Money is by far still the biggest use case for blockchain tech -- but others are gaining ground.</strong></p>
 
-        <p><em><strong>That's it for now. Thanks for spending some time with the newsletter today! A full revision history of it, including earlier drafts, is available <a href="https://github.com/Indizr/web3weekly/commits/master">here</a> if you're interested. <!-- Remember to change or simply delete this next sentence for email blast. This version intended as website copy for w3w.news, really. --> If you'd like to get updates like this in your inbox every Sunday, please join our email list <a href="https://w3w.news">here</a>.</strong></em></p>
+        <p>Bitcoin's share of all global crypto market capitalization has fallen from about 70% at the start of the year to just under 45% recently. Meanwhile, ether's market share has risen from 11% to above 17%, according to <a href="https://coinmarketcap.com/charts/">CoinMarketCap</a> data.</p>
+
+        <p>If we read so-called "bitcoin dominance" as a broad indicator of the popularity of cryptocurrency, and "ETH dominance" as a rough measure of demand for blockchain-based applications, a narrowing gap between the two numbers lately sends a clear message: The marketplace is increasingly valuing blockchain as a software development tool, not just a monetary medium.</p>
+
+        <p>The latter is by no means dead in the water, mind you. It's just that a broader view of blockchain technology seems to be taking hold among investors and users.</p>
+
+        <p><strong>4. The Fed doesn't really understand how inflation works.</strong></p>
+
+        <p>This is a longtime pet peeve of bitcoiners in particular, who usually don't need much prompting to reel off a litany of the U.S. central bank's past mistakes. So it's not entirely news.</p>
+
+        <p>That said, it's not everyday you hear a similarly harsh assessment from the horse's mouth. That's essentially what happened on Tuesday when CNBC's Becky Quick <a href="https://www.youtube.com/watch?v=Q1tNVIWqIvg">interviewed former Federal Reserve governor Dan Tarullo</a>, who's now teaching at Harvard Law School.</p>
+
+        <p>Asked about potential future moves by the Fed's policy committee, Tarullo said: "There really is not a workable theory of inflation that helps them to make decisions on a meeting-by-meeting basis."</p>
+
+        <p>Wow. You know, amid all the bloviation that tends to fill 24-hour cable news, it's  easy to miss when something of actual import gets said. This strikes me as one of those things, considering that fighting inflation is fully <a href="https://www.bankrate.com/banking/federal-reserve/federal-reserve-dual-mandate/">half the Fed's entire job</a>, with stability of world's largest economy at stake.</p>
+
+        <p><em>And they don't even know how inflation works? Now you tell us?!?</em></p>
+
+
+        <p><strong>5. The stock market is profoundly broken.</strong>
+
+        <p>I'm including this one on the list -- even though company shares obviously aren't the same thing as money per se -- because it cuts to the crucial issue of what works for people as a store of economic value.</p>
+
+        <p>Traditionally in the U.S. and other industrialized countries, citizens are told that once they have some money in hand, one of the best things to do with it is to invest it in the stock market. This is supposedly a consistent method to grow the money's value over time and collect income in the form of dividend payments.</p>
+
+        <p>But, again, a recent CNBC bombshell hiding in plain sight calls this one into question. In this one, Melissa Lee <a href="https://www.youtube.com/watch?v=KjVM3pidH_A">interviews Dave Lauer</a>, a former stock trader at Citadel, one of the world's largest hedge funds.</p>
+
+        <p>He describes a nightmarish market structure that's evolved over time in the U.S. in which publicly listed prices are wildly inaccurate, brokers have side deals with each other using different ones, and small investors routinely get hosed on their trades as a result.</p>
+
+        <p>Mind you, the U.S. has a <a href="https://www.investopedia.com/terms/n/nbbo.asp">"national best bid and offer"</a> rule in place that requires brokers to find the best price available for their customers. But enforcing that is "like nailing Jell-O to a tree," Lauer says.</p>
+
+        <p>Yikes.</p>
+
+
+        <p><em><strong>That's it for now. As ever, a quick disclaimer: This newsletter is intended for informational purposes only, not as investment advice. For the latter, please <a href="https://www.urbandictionary.com/define.php?term=do%20your%20own%20research">DYOR</a> and consult appropriate financial professionals to make the most suitable choices for your particular needs.</p>
+
+        <p>Thanks for spending some time with the newsletter today! A full revision history of it, including earlier drafts, is available <a href="https://github.com/Indizr/web3weekly/commits/master">here</a> if you're interested. <!-- Remember to change or simply delete this next sentence for email blast. This version intended as website copy for w3w.news, really. --> If you'd like to get updates like this in your inbox every Sunday, please join our email list <a href="https://w3w.news">here</a>.</strong></em></p>
 
 <p><em>— Peter A. McKay</em></p>
 
 <!--
+
 <p>P.S: If you're just beginning to learn about decentralization, please check out <a href="https://github.com/Indizr/web3newbies/blob/master/web3newbies.md">Web 3.0 for Newbies,</a> my curated collection of links to help newcomers get up to speed. 😉</p>
+
 -->
 
 <br>
 <hr>
 
-<p><em>Copyright 2020-2021 (c), Indizr Hodlings LLC</em></p>
+<p><em>Copyright 2017-2021 (c), Indizr Hodlings LLC</em></p>
 
 </div> <!-- End palette -->
 
