Adding some story candidates

--- a/newsletter/2021-06-27.html
+++ b/newsletter/2021-06-27.html
@@ -5,9 +5,22 @@
   Some story candidates...
 
   - A renewed crypto crackdown in China hit BTC hard.
+
+  - Bloomberg: A pair of South African brothers have vanished, along with Bitcoin worth $3.6 billion from their cryptocurrency investment platform. https://www.bloomberg.com/news/articles/2021-06-23/s-african-brothers-vanish-and-so-does-3-6-billion-in-bitcoin
+
+  - Some downsides of El Salvador's recent bitcoin law: https://www.coindesk.com/article-7-bitcoin-el-salvador-selgin
+
   - TK
+
   - TK
-  - TK 
+
+  - TK
+
+  - TK
+
+  - TK
+  
+  - Supreme Court rules for tree speech of teenager who posted profane messages on Snapchat. https://www.nytimes.com/2021/06/23/us/supreme-court-free-speech-cheerleader.html
 
   -->
 
