Adding some link possibilities from CoinDesk

--- a/newsletter/2021-07-04.html
+++ b/newsletter/2021-07-04.html
@@ -24,6 +24,18 @@
 
   - FB crosses $1T valuation. (Need link)
 
+  - China's crackdown on bitcoin miners has been a boon to other countries that want to build up the industry locally. https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere | Hashrate has been stabilizing. https://www.coindesk.com/bitcoin-hashrate-stabilizes
+
+  - USDC could soon expand to 10 additional blockchains. https://www.coindesk.com/usdc-stablecoin-could-soon-expand-to-10-more-blockchains
+
+  - Pop star Katy Perry is launching her own NFT's + becoming an investor in Theta Labs. https://www.coindesk.com/katy-perry-launches-nfts-acquires-stake-in-theta-labs
+
+  - Complains against crypto exchanges are on the rise in the US. https://www.coindesk.com/crypto-exchange-binance-us-kraken-coinbase
+
+  - A good rundown/update of the Quadriga mess: https://www.coindesk.com/gerald-cotten-quadriga-serial-grifter
+
+  - Update on China's CBDC and its privacy implications: https://www.coindesk.com/power-privacy-and-chinas-digital-currency
+
   -->
 
 <html lang="en">
